syntax = "proto3";

package hello.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/type/date.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/davidyannick86/bufbuild/testbuf/protogen/hello/v1;proto_hello";

message SayHelloRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 2,
    (buf.validate.field).string.max_len = 10,
    (buf.validate.field).string.pattern = "^[a-zA-Z ]+$"
  ];
  int32 age = 2 [
    (buf.validate.field).int32.gt = 20,
    (buf.validate.field).int32.lt = 80
  ];
  google.type.Date date = 3;
}

message SayHelloResponse {
  string message = 1;
}

message GreetManyTimesRequest {
  string name = 1 [
    json_name = "name",
    (buf.validate.field).string.min_len = 2,
    (buf.validate.field).string.max_len = 10,
    (buf.validate.field).string.pattern = "^[a-zA-Z ]+$"
  ];
}

message GreetManyTimesResponse {
  string message = 1;
}

message LongGreetRequest {
  string name = 1 [
    json_name = "name",
    (buf.validate.field).string.min_len = 2,
    (buf.validate.field).string.max_len = 10,
    (buf.validate.field).string.pattern = "^[a-zA-Z ]+$"
  ];
}

message LongGreetResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      post: "/v1/hello"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to say hello to someone"
      summary: "Say hello to someone"
    };
  }
  // Server streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {
    option (google.api.http) = {
      post: "/v1/greetmanytimes"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to greet many times"
      summary: "Greet many times"
    };
  }

  // Client streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {
    option (google.api.http) = {
      post: "/v1/longgreet"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to long greet"
      summary: "Long greet"
    };
  }
}
